add_library(
	pluto_electricmaple SHARED
	em_connection.c
	em_egl.cpp
	em_remote_experience.cpp
	em_stream_client.c
	render/GLDebug.cpp
	render/GLError.cpp
	render/GLSwapchain.cpp
	render/render.cpp
	)
target_link_libraries(
	pluto_electricmaple
	PRIVATE
		pluto_proto
		aux_util
		${JSONGLIB_LIBRARIES}
		${LIBSOUP_LIBRARIES}
		${GIO_LIBRARIES}
		${ANDROID_LOG_LIBRARY}
	PUBLIC
		OpenXR::openxr_loader # actually only need headers but prefab doesn't expose that
		EGL::EGL
		OpenGLES::OpenGLESv3
		xrt-interfaces
		aux-includes
		gstreamer_android
		${GLIB_LIBRARIES}
	)
target_compile_definitions(
	pluto_electricmaple PUBLIC XR_USE_PLATFORM_ANDROID XR_USE_GRAPHICS_API_OPENGL_ES
	)
target_include_directories(
	pluto_electricmaple
	PRIVATE
		${LIBSOUP_INCLUDE_DIRS}
		${JSONGLIB_INCLUDE_DIRS}
		${GIO_INCLUDE_DIRS}
	PUBLIC
		..
		${GST_INCLUDE_DIRS}
		${GLIB_INCLUDE_DIRS}
	)
